# LLM

./: .gitignore  pyproject.toml
Building_Systems_with_ChatGPTAPI/: Build an End-to-End System.md  Evaluation Part II.md  Evaluation part I.md  L1 Language Models, the Chat Format and Tokens.ipynb  L1 Language Models, the Chat Format and Tokens.md  L2 Evaluate Inputs Classification.ipynb  L2 Evaluate Inputs Classification.md  L3 Evaluate Inputs Moderation.ipynb  L3 Evaluate Inputs Moderation.md  L4 Process Inputs Chain of Thought Reasoning.ipynb  L4 Process Inputs Chain of Thought Reasoning.md  L5 Process Inputs Chaining Prompts.ipynb  L5 Process Inputs Chaining Prompts.md  L6 Check outputs.ipynb  L6 Check outputs.md  L7 Evaluation part I.ipynb  L8 Evaluation Part II.ipynb  L9 Build an End-to-End System.ipynb  utils.py
LangChain/: Agents.md  Data.csv:Zone.Identifier  Evaluation.md  L1-Models_Prompts_OutputParser.ipynb  L2-Memory.ipynb  L3-Chains.ipynb  L4-QnA.ipynb  L5-Evaluation.ipynb  L6-Agents.ipynb  QnA.md
LangChain_Chat/: 01_document_loading.ipynb  02_document_splitting.ipynb  03_vectorstores_and_embeddings.ipynb  04_retrieval.ipynb  05_question_answering.ipynb  06_chat.ipynb  wb_llm_eval_starter.ipynb  wb_train_llm_starter.ipynb
LangChain_Chat/data/: MachineLearning-Lecture01.pdf:Zone.Identifier  convchain.jpg:Zone.Identifier  (+3 more)
Prompt_Engineering_Dev/: Expanding.md  GuidelinePrompting.ipynb  Guidelines for Prompting.md  Inferring.md  Iterative Prompt Develelopment.md  IterativePromptDevelopment.ipynb  Summarizing.md  The Chat Format.md  Transforming.md
