[tool.poetry]
name = "llm_practice"
version = "0.1.0"
description = ""
authors = ["Tamoghna Saha <tamoghnasaha.22@gmail.com>"]
repository = "https://www.github.com/hwchase17/langchain"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = "^1"
SQLAlchemy = ">=1.4,<3"
requests = "^2"
PyYAML = ">=5.4.1"
numpy = "^1"
pandas = "^2.0.2"
tqdm = ">=4.48.0"
openai = "^0.27.8"
pypdf = "^3.4.0"
openapi-schema-pydantic = "^1.2"
langchainplus-sdk = ">=0.0.17"
transformers = "^4.30.2"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"
ipykernel = "^6.20.1"
docarray = "^0.32.0"
lxml = "^4.9.2"
ipython = "~8.8.0"
tiktoken = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
